added basic javascript functionality in the form submission and result

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,34 @@
     <title>LabSec REST Endpoint Example</title>
 </head>
 <body>
-<form action="http://localhost:8080/labseq" method="get">
     <label for="inputNumber">Enter a number:</label>
     <input type="text" id="inputNumber" name="inputNumber">
-    <button type="submit">Submit</button>
-</form>
+    <button id="submit" type="submit">Submit</button>
+<div>
+    <span id="result">
+
+    </span>
+</div>
+<script>
+    const button = document.getElementById("submit");
+
+    button.addEventListener("click", function() {
+        const input = document.getElementById("inputNumber");
+        let result;
+        fetch("/labseq/" + input.value)
+        .then(response => {
+            if (response.ok) {
+              return response.text();
+            }
+            throw new Error("Network response was not ok");
+        })
+        .then(response => {
+            const con = document.getElementById("result");
+            con.innerText = response;
+        })
+    });
+
+
+</script>
 </body>
 </html>
