--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -1,14 +1,22 @@
 <html>
 <head>
     <title>LabSec REST Endpoint Example</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<label for="inputNumber">Enter a number:</label>
-<input type="text" id="inputNumber" name="inputNumber">
-<button id="submit" type="submit">Submit</button>
+<form method="modal">
+    <div class="form-group">
+        <label for="inputNumber">Enter a number:</label>
+        <input type="text" id="inputNumber" name="inputNumber">
+        <button id="submit" type="submit">Submit</button>
+    </div>
+</form>
+
 <div>
     <span id="result">
-
     </span>
 </div>
 <script>
